<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registracija"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/Username"
        android:textColorHint="#FF850002" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="#FF850002" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#FF850002" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#FF850002"
        android:text="@string/register"
        android:textColor="#ffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/LogIn"
            android:textColor="#FF850002"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>